Fix JavaFX integration and add Windows deployment guide
Changes:
- Enhanced RepairQ.java with comprehensive error logging and Java version detection
- Fixed pom.xml: Added maven-shade-plugin for fat JAR (38.97 MB with all dependencies)
- Created RepairQ-Run.bat launcher with:
  * Java availability checks
  * JAR file verification
  * Error logging to RepairQ-run.log
  * Exit code tracking and error messages

- Added WINDOWS-DEPLOYMENT.md with three solutions for JavaFX native library issues:
  A) Download and configure JavaFX SDK separately
  B) Use jlink to create custom Java runtime with JavaFX
  C) Use jpackage for native Windows installer creation

- Updated README.md with:
  * Quick start instructions
  * Building from source guide
  * Reference to deployment documentation

Status:
✓ Application compiles successfully with Java 21
✓ Fat JAR created with all dependencies (38.97 MB)
✓ JavaFX classes included, runtime components need separate setup
✓ Batch launcher ready to run once JavaFX SDK is configured
✓ All source code changes committed

Next steps for full deployment:
1. Download JavaFX SDK 21 for your platform
2. Configure JAVAFX SDK path in batch launcher (Option A)
3. Or build custom runtime with jlink (Option B)
4. Or create native installer with jpackage (Option C)